// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlledInput Snapshots should match snapshot for form 1`] = `
<RCTView
  ref={null}
>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        EMAIL
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTTextInput
            accessibilityHint="Enter email"
            accessibilityLabel="Email"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter email"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="email-input"
            value=""
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        PASSWORD
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTText
            color="#475569"
            name="lock-closed-outline"
            ref={null}
            size={20}
            style={
              {
                "marginRight": 14,
              }
            }
            testID="RCTText"
          >
            lock-closed-outline
          </RCTText>
          <RCTTextInput
            accessibilityHint="Enter password"
            accessibilityLabel="Password"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#475569"
            ref={null}
            secureTextEntry={true}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="password-input"
            value=""
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        USERNAME
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTTextInput
            accessibilityHint="Enter username"
            accessibilityLabel="Username"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter username"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="username-input"
            value=""
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        BIO
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTTextInput
            accessibilityHint="Tell us about yourself"
            accessibilityLabel="Bio"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            multiline={true}
            numberOfLines={4}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Tell us about yourself"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="bio-input"
            value=""
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
</RCTView>
`;

exports[`ControlledInput Snapshots should match snapshot with values 1`] = `
<RCTView
  ref={null}
>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        EMAIL
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTTextInput
            accessibilityHint="Enter email"
            accessibilityLabel="Email"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter email"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="email-input"
            value="test@example.com"
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        PASSWORD
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTText
            color="#475569"
            name="lock-closed-outline"
            ref={null}
            size={20}
            style={
              {
                "marginRight": 14,
              }
            }
            testID="RCTText"
          >
            lock-closed-outline
          </RCTText>
          <RCTTextInput
            accessibilityHint="Enter password"
            accessibilityLabel="Password"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoCapitalize="none"
            autoComplete="off"
            autoCorrect={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter password"
            placeholderTextColor="#475569"
            ref={null}
            secureTextEntry={true}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="password-input"
            value=""
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        USERNAME
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTTextInput
            accessibilityHint="Enter username"
            accessibilityLabel="Username"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter username"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="username-input"
            value="testuser"
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 20,
          "width": "100%",
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#475569",
            "fontFamily": "JetBrainsMono-Regular",
            "fontSize": 10,
            "fontWeight": "800",
            "letterSpacing": 1.5,
            "marginBottom": 8,
            "marginLeft": 4,
          }
        }
        testID="RCTText"
      >
        BIO
      </RCTText>
      <RCTView
        data-intensity={10}
        data-tint="dark"
        ref={null}
        style={
          {
            "0": {
              "borderRadius": 16,
              "overflow": "hidden",
            },
            "1": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderRadius": 16,
            },
            "2": {
              "borderRadius": 12,
            },
            "3": {
              "borderColor": "rgba(255, 255, 255, 0.05)",
              "borderWidth": 1,
            },
            "4": {
              "padding": 16,
            },
            "5": {
              "backgroundColor": "rgba(255, 255, 255, 0.03)",
              "borderColor": "transparent",
              "borderRadius": 18,
              "borderWidth": 1,
              "height": 58,
              "justifyContent": "center",
              "padding": 0,
            },
            "6": undefined,
            "backgroundColor": "rgba(255, 255, 255, 0.8)",
          }
        }
      >
        <RCTView
          ref={null}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingHorizontal": 18,
            }
          }
        >
          <RCTTextInput
            accessibilityHint="Tell us about yourself"
            accessibilityLabel="Bio"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            multiline={true}
            numberOfLines={4}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Tell us about yourself"
            placeholderTextColor="#475569"
            ref={null}
            selectionColor="#DFFF00"
            spellCheck={false}
            style={
              {
                "color": "#F8FAFC",
                "flex": 1,
                "fontFamily": "Satoshi-Regular",
                "fontSize": 16,
                "fontWeight": "500",
                "height": "100%",
              }
            }
            testID="bio-input"
            value="Hello world"
          />
        </RCTView>
      </RCTView>
    </RCTView>
  </RCTView>
</RCTView>
`;
